Adding Speech2Tweet to project section

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
             <section class="resume-section" id="side-projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Side Projects</h2>
+                    <h4>Speech2Tweet</h4>
+                    <p>Speech2Tweet is an Alexa skill I built in Node.js where a user can invoke their Echo device to send a tweet via dictation.</p>
+                    <p><u><a href="https://github.com/ColemanMitch/Speech2Tweet">Link to GitHub project repo</a></u></p>                    
+                    <hr>
                     <h4>GroupMe.FYI</h4>
                     <p><u><a href="www.groupme.fyi">Link</a></u> to project.<br><b>Note:</b> the app might take a second to load.</p>
                     <p>Full write up is coming soon!</p>
