--- a/index.html
+++ b/index.html
@@ -157,7 +157,13 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Side Projects</h2>
                     <h4>Speech2Tweet</h4>
+                    <center><img src="assets/img/Speech2Tweet_Live_Demo.gif" width=70% class="ImageBorder"></center>
+                    <br>
                     <p>Speech2Tweet is an Alexa skill I built in Node.js where a user can invoke their Echo device to send a tweet via dictation.</p>
+                    <p>Originally, I wanted to create this Alexa skill using a Python backend, but ran into issues with the handling of <a href="https://developer.amazon.com/en-US/docs/alexa/custom-skills/create-and-edit-custom-slot-types.html">custom slot types</a> (customer user input). 
+                        I took the deadend I ran into with the Python implementation as an opportunity
+                        to code in JavaScript. The gif embedded above shows the invocation and application of the skill in the Alexa Developer Console side-by-side with the output on Twitter. </p>
+                        <p>Note that the source of my "hello world" tweet is "Speech 2 Tweet"</p>
                     <p><u><a href="https://github.com/ColemanMitch/Speech2Tweet">Link to GitHub project repo</a></u></p>                    
                     <hr>
                     <h4>GroupMe.FYI</h4>
