Cleaning up Side Projects section

--- a/index.html
+++ b/index.html
@@ -119,19 +119,20 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><a href="#skills" title="Python" data-toggle="tooltip"><i class="fab fa-python"></i></a></li>
-                        <li class="list-inline-item"><a href="#skills" title="C++" data-toggle="tooltip"><i class="icon-cplusplus"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="JavaScript" data-toggle="tooltip"><i class="fab fa-js-square"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="HTML" data-toggle="tooltip"><i class="fab fa-html5"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="CSS" data-toggle="tooltip"><i class="fab fa-css3"></i></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Bootstrap" data-toggle="tooltip"><i class="fab fa-bootstrap"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Flask" data-toggle="tooltip"><i class="icon-flask"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Django" data-toggle="tooltip"><i class="icon-django"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Git" data-toggle="tooltip"><i class="icon-git"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="C++" data-toggle="tooltip"><i class="icon-cplusplus"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="SQL" data-toggle="tooltip"><i class="fas fa-database"></i></a></li>
 
 
 
                     </ul>
-                    <div class="subheading mb-3">Additional Computer Skills</div>
+                    <div class="subheading mb-3">Additional Skills</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>Microsoft Office Suite (Excel, Word, Teams, PowerPoint, etc.)
@@ -156,19 +157,26 @@
             <section class="resume-section" id="side-projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Side Projects</h2>
+                    <h4>GroupMe.FYI</h4>
+                    <!--<p><u><a href="www.groupme.fyi">Link</a></u> to project.<br><b>Note:</b> the app might take a second to load.</p>-->
+                    <p>Full write up coming soon!</p>
+                    <p><u><a href="https://github.com/ColemanMitch/GroupMe.FYI">Link to GitHub project repo</a></u></p>
+                    <hr>
+                    <h4>The Odin Project - JavaScript Track</h4>
+                    <center><img src="assets/img/top-logo.png" width=60%></center>
+                    <!--<p><u><a href="www.groupme.fyi">Link</a></u> to project.<br><b>Note:</b> the app might take a second to load.</p>-->
+                    <p>Lately, I've been working my way through <a href="https://www.theodinproject.com/">The Odin Project's</a> online curriculum for full-stack Javascript development. You can check out my progress/projects in the linked GitHub repo below!</p>
+                    <p><u><a href="https://github.com/ColemanMitch/TheOdinProject">Link to GitHub project repo</a></u></p>
+                    <hr>
                     <h4>Speech2Tweet</h4>
                     <center><img src="assets/img/Speech2Tweet_Live_Demo.gif" width=70% class="ImageBorder"></center>
                     <br>
-                    <p>Speech2Tweet is an Alexa skill I built in Node.js where a user can invoke their Echo device to send a tweet via dictation.</p>
-                    <p>Originally, I wanted to create this Alexa skill using a Python backend, but ran into issues with the handling of <a href="https://developer.amazon.com/en-US/docs/alexa/custom-skills/create-and-edit-custom-slot-types.html">custom slot types</a> (customer user input). 
-                        I took the deadend I ran into with the Python implementation as an opportunity
-                        to code in JavaScript. The gif embedded above shows the invocation and application of the skill in the Alexa Developer Console side-by-side with the output on Twitter. </p>
+                    <p>Speech2Tweet is an Alexa skill I created where a user can send a tweet with their Echo device via dictation.</p>
+                    <p>Originally, I wanted to create this Alexa skill using Python, but ran into issues with the handling of <a href="https://developer.amazon.com/en-US/docs/alexa/custom-skills/create-and-edit-custom-slot-types.html">custom slot types</a> (customer user input). 
+                        I took the dead-end I ran into with Python as an opportunity
+                        to brush up on JavaScript. The embedded gif above shows the invocation of the skill in the Alexa Developer Console side-by-side with the output on Twitter. </p>
                         <p>Note that the source of my "hello world" tweet is "Speech 2 Tweet"</p>
                     <p><u><a href="https://github.com/ColemanMitch/Speech2Tweet">Link to GitHub project repo</a></u></p>                    
-                    <hr>
-                    <h4>GroupMe.FYI</h4>
-                    <p><u><a href="www.groupme.fyi">Link</a></u> to project.<br><b>Note:</b> the app might take a second to load.</p>
-                    <p>Full write up is coming soon!</p>
                     <hr>
                     <h4>Spowerfy</h4>
                     <center><img src="assets/img/spowerfy-example.gif" width=70% class="ImageBorder"></center>
@@ -199,7 +207,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Outside of work, I enjoy traveling, exercising, reading, listening to podcasts, and following most major sports leagues (NCAAF, NFL, MLB, NBA, etc.)</p>
+                    <p>Outside of work, I enjoy traveling (during non-pandemic times), exercising, reading, listening to podcasts, and following major North American sports (NCAAF, NFL, MLB, NBA, etc.)</p>
                     <center><img class="img-fluid img-profile" src="assets/img/spain-man.jpg" alt="" width=45% /></span></a>
                     <p>Enjoying the vistas of Toledo, Spain!</p></center>
                 </div>
