--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Cole <span class="text-primary">Mitchell</span></h1>
-                    <div class="subheading mb-5">1254 W Diversey Pkwy Apt #1 · Chicago, IL 60614 · (847) 636-6773 · w.coleman.mitchell@gmail.com</a></div>
+                    <div class="subheading mb-5"> (847) 636-6773 · w.coleman.mitchell@gmail.com</a></div>
                     <p class="lead mb-5">I am recent engineering graduate of the University of Notre Dame working in consulting with a keen interest in technology and software development. Welcome to my home page!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/w-coleman-cole-mitchell-516710aa"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://www.github.com/ColemanMitch"><i class="fab fa-github"></i></a><a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com"><i class="far fa-envelope"></i></a><a class="social-icon" href="https://stackoverflow.com/users/9124319/cole-mitchell"><i class="fab fa-stack-overflow"></i></a>
