--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="subheading mb-5"> (847) 636-6773 · w.coleman.mitchell@gmail.com</a></div>
                     <p class="lead mb-5">I am recent engineering graduate of the University of Notre Dame working in consulting with a keen interest in technology and software development. Welcome to my home page!</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/w-coleman-cole-mitchell-516710aa"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://www.github.com/ColemanMitch"><i class="fab fa-github"></i></a><a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com"><i class="far fa-envelope"></i></a><a class="social-icon" href="https://stackoverflow.com/users/9124319/cole-mitchell"><i class="fab fa-stack-overflow"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/cole-mitchell-516710aa/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://www.github.com/ColemanMitch"><i class="fab fa-github"></i></a><a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com"><i class="far fa-envelope"></i></a><a class="social-icon" href="https://stackoverflow.com/users/9124319/cole-mitchell"><i class="fab fa-stack-overflow"></i></a>
                     </div>
                 </div>
             </section>
@@ -120,6 +120,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><a href="#skills" title="Python" data-toggle="tooltip"><i class="fab fa-python"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="JavaScript" data-toggle="tooltip"><i class="fab fa-js-square"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="React" data-toggle="tooltip"><i class="fab fa-react"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="HTML" data-toggle="tooltip"><i class="fab fa-html5"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="CSS" data-toggle="tooltip"><i class="fab fa-css3"></i></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Bootstrap" data-toggle="tooltip"><i class="fab fa-bootstrap"></i></a></li>
@@ -157,9 +158,14 @@
             <section class="resume-section" id="side-projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Side Projects</h2>
-                    <h4>GroupMe.FYI</h4>
-                    <!--<p><u><a href="www.groupme.fyi">Link</a></u> to project.<br><b>Note:</b> the app might take a second to load.</p>-->
+                    <h4>Spowerfy Redux</h4>
                     <p>Full write up coming soon!</p>
+                    <p><u><a href="https://spowerfy-frontend.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
+                    <p><u><a href="https://github.com/ColemanMitch/Spowerfy-Redux">Link to GitHub project repo</a></u></p>
+                    <hr>
+                    <h4>GroupMe.FYI</h4>
+                    <p>Full write up coming soon!</p>
+                    <p><u><a href="https://groupmefyi.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
                     <p><u><a href="https://github.com/ColemanMitch/GroupMe.FYI">Link to GitHub project repo</a></u></p>
                     <hr>
                     <h4>The Odin Project - JavaScript Track</h4>
@@ -200,7 +206,7 @@
             <section class="resume-section" id="resume">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Resume</h2>
-                    <iframe src="https://drive.google.com/file/d/1Wu_cWkzWXGNOWyvBC3kNu8mW-GpVTL3s/preview" width=90% height="500"></iframe>
+                    <iframe src="https://drive.google.com/file/d/1IMEY709Oxp0p1OziA1u_VCFttWR4Our_/preview" width=90% height="500"></iframe>
                     </iframe>
                 </div>
             </section>
