--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">Cole <span class="text-primary">Mitchell</span></h1>
                     <div class="subheading mb-5"> (847) 636-6773 · w.coleman.mitchell@gmail.com</a></div>
-                    <p class="lead mb-5">I am recent engineering graduate of the University of Notre Dame working in consulting with a keen interest in technology and software development. Welcome to my home page!</p>
+                    <p class="lead mb-5">I am recent engineering graduate of the University of Notre Dame working in tech consulting with a keen interest in software engineering.
+                        Currently, I'm working as an Experienced Consultant in the Software Engineering practice at West Monroe Partners where I focus primarily on Frontend/UI development. Welcome to my home page!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cole-mitchell-516710aa/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://www.github.com/ColemanMitch"><i class="fab fa-github"></i></a><a class="social-icon" <a href="mailto:w.coleman.mitchell@gmail.com"><i class="far fa-envelope"></i></a><a class="social-icon" href="https://stackoverflow.com/users/9124319/cole-mitchell"><i class="fab fa-stack-overflow"></i></a>
                     </div>
@@ -55,16 +56,26 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Experienced Consultant</h3>
+                            <div class="subheading mb-3">West Monroe Partners - Chicago, IL</div>
+                            <p>Currently working in West Monroe Partners' Software Engineering Practice with a focus in Frontend Development.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Consultant</h3>
                             <h3 class="mb-0">Analyst</h3>
                             <div class="subheading mb-3">Deloitte Consulting - Chicago, IL</div>
                             <b><p>Strategy & Analytics</p></b>
 
-                            <p>In Deloitte Consulting's S & A Offering Portfolio, I've had the opportunity to work on several cases across various industries. Some past clients I’ve worked for include a national health care system focused on optimizing their revenue cycle by mitigating insurance payor denials and the current IL Governor J.B. Pritzker’s <a href="https://dupagedemocrats.com/pritzkertransition/">Healthy Children and Families Transition Committee</a>. Currently I’m working with a state government client where I led a team of developers to build dashboards quantifying the impact ($ issuance, individuals affected) of COVID-19 policy changes.</p>
+                            <p>In Deloitte Consulting's S & A Offering Portfolio, I've had the opportunity to work on several cases across various industries. 
+                                Some past clients I’ve worked for include a national health care system focused on optimizing their revenue cycle by mitigating insurance payor denials and the current 
+                                IL Governor J.B. Pritzker’s <a href="https://dupagedemocrats.com/pritzkertransition/">Healthy Children and Families Transition Committee</a>. 
+                                Most recently, I worked with a state government client where I led a team of developers to build dashboards quantifying the impact ($ issuance, individuals affected) of COVID-19 policy changes.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - Present<br>July 2018 - July 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - April 2021<br>July 2018 - July 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -104,7 +115,7 @@
                             <h3 class="mb-0">University of Notre Dame</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <i><div>Mechanical Engineering</div></i>
-                            <p>GPA: 3.59/4.00</p>
+                            <p>GPA: 3.6/4.0</p>
                             <p><u>Notable Coursework</u>: Mechanical Engeering Senior Design Project, Design Methodology, C/C++ Programming, Electrical Engineering & Embedded Systems, Robotics</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2014 - May 2018</span></div>
@@ -118,17 +129,18 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><a href="#skills" title="Python" data-toggle="tooltip"><i class="fab fa-python"></i></a></li>
-                        <li class="list-inline-item"><a href="#skills" title="JavaScript" data-toggle="tooltip"><i class="fab fa-js-square"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="TypeScript/JavaScript" data-toggle="tooltip"><i class="fab fa-js-square"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="React" data-toggle="tooltip"><i class="fab fa-react"></i></a></li>
-                        <li class="list-inline-item"><a href="#skills" title="HTML" data-toggle="tooltip"><i class="fab fa-html5"></i></a></li>
-                        <li class="list-inline-item"><a href="#skills" title="CSS" data-toggle="tooltip"><i class="fab fa-css3"></i></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="Python" data-toggle="tooltip"><i class="fab fa-python"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Bootstrap" data-toggle="tooltip"><i class="fab fa-bootstrap"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Flask" data-toggle="tooltip"><i class="icon-flask"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Django" data-toggle="tooltip"><i class="icon-django"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Git" data-toggle="tooltip"><i class="icon-git"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="C++" data-toggle="tooltip"><i class="icon-cplusplus"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="SQL" data-toggle="tooltip"><i class="fas fa-database"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="Node.js" data-toggle="tooltip"><i class="fab fa-node-js"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="HTML" data-toggle="tooltip"><i class="fab fa-html5"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="CSS" data-toggle="tooltip"><i class="fab fa-css3"></i></i></a></li>
 
 
 
@@ -139,7 +151,7 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>Microsoft Office Suite (Excel, Word, Teams, PowerPoint, etc.)
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Altassian Jira
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Altassian Jira/Confluence
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>Tableau
