Update project section some more

--- a/index.html
+++ b/index.html
@@ -170,13 +170,14 @@
             <section class="resume-section" id="side-projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Side Projects</h2>
-                    <h4>Spowerfy Redux</h4>
-                    <p>Full write up coming soon!</p>
+                    <h4>Spowerfy-Redux</h4>
+                    <p>Spowerfy-Redux is a web app written in React that controls a user's Spotify playback to skip to the next song in a playlist at a specified interval (users can select between 5 - 120 seconds). Users also have the option to start the playback on any of their active devices and any of their playlists. The ideal use case for Spowerfy is to automate your next power hour! 🍺 <br><br>
+                    It is also a refactor of an existing project that I built back in 2020 in Python with Flask which can be found linked <a href="https://github.com/ColemanMitch/Spowerfy">here.</a></p>
                     <p><u><a href="https://spowerfy-frontend.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
                     <p><u><a href="https://github.com/ColemanMitch/Spowerfy-Redux">Link to GitHub project repo</a></u></p>
                     <hr>
                     <h4>GroupMe.FYI</h4>
-                    <p>Full write up coming soon!</p>
+                    <p>GroupMe.FYI is a web app written in Django that authenticates with GroupMe allowing users to see key stats (total likes, total messages, etc.) about the user's groups.</p>
                     <p><u><a href="https://groupmefyi.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
                     <p><u><a href="https://github.com/ColemanMitch/GroupMe.FYI">Link to GitHub project repo</a></u></p>
                     <hr>
@@ -196,23 +197,6 @@
                         <p>Note that the source of my "hello world" tweet is "Speech 2 Tweet"</p>
                     <p><u><a href="https://github.com/ColemanMitch/Speech2Tweet">Link to GitHub project repo</a></u></p>                    
                     <hr>
-                    <h4>Spowerfy</h4>
-                    <center><img src="assets/img/spowerfy-example.gif" width=70% class="ImageBorder"></center>
-                    <br>
-                    <p>Spowerfy is a web app I wrote with Python using the micro web framework Flask. Spowerfy authenticates with the user's Spotify account and controls the playback of whichever playlist the user configures it to. It does this all while updating the album art, current track, and current artist in lockstep with the playback.<br> <b>Note:</b> The speed of the above .gif has been increased for illustrative purposes</p>
-                    <p><u><a href="https://github.com/ColemanMitch/Spowerfy">Link to GitHub project repo</a></u></p>
-                    <hr>
-
-                    <h4>C/C++ Programming Final Project</h4>
-                          <div class="iframe-container">
-                          <!-- Copy & Pasted from YouTube -->
-                          <center><iframe width="560" height="349" class="ImageBorder" src="https://www.youtube.com/embed/-MGn86i2mmo" frameborder="0" allowfullscreen></iframe></center>
-                        </div>
-                        <br>
-                        <p>For my final project The above video is my final project demo of a C/C++ course I took back in undergrad. In addition to implmenting the Simple and Fast Multimedia Library (SFML) as part of this project, I also added the functionality of
-      Arduino joystick control.</p>
-                        <p><u><a href="https://github.com/ColemanMitch/CSE-20232-Final-Project">Link to GitHub project repo</a></u></p>
-<hr>
                 </div>
             </section>
             <section class="resume-section" id="resume">
