Update skills + pare down old projects

--- a/index.html
+++ b/index.html
@@ -127,37 +127,35 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Programming Languages & Frameworks</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><a href="#skills" title="TypeScript/JavaScript" data-toggle="tooltip"><i class="fab fa-js-square"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="React" data-toggle="tooltip"><i class="fab fa-react"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Python" data-toggle="tooltip"><i class="fab fa-python"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Bootstrap" data-toggle="tooltip"><i class="fab fa-bootstrap"></i></a></li>
-                        <li class="list-inline-item"><a href="#skills" title="Flask" data-toggle="tooltip"><i class="icon-flask"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="Ruby" data-toggle="tooltip"><i class="icon-ruby"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="Rails" data-toggle="tooltip"><i class="icon-ruby-on-rails"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Django" data-toggle="tooltip"><i class="icon-django"></i></a></li>
-                        <li class="list-inline-item"><a href="#skills" title="Git" data-toggle="tooltip"><i class="icon-git"></i></a></li>
+                        <li class="list-inline-item"><a href="#skills" title="Flask" data-toggle="tooltip"><i class="icon-flask"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="C++" data-toggle="tooltip"><i class="icon-cplusplus"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="SQL" data-toggle="tooltip"><i class="fas fa-database"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="Node.js" data-toggle="tooltip"><i class="fab fa-node-js"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="HTML" data-toggle="tooltip"><i class="fab fa-html5"></i></a></li>
                         <li class="list-inline-item"><a href="#skills" title="CSS" data-toggle="tooltip"><i class="fab fa-css3"></i></i></a></li>
-
-
-
                     </ul>
                     <div class="subheading mb-3">Additional Skills</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Microsoft Office Suite (Excel, Word, Teams, PowerPoint, etc.)
+                        <li>   
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Git/GitHub
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>Altassian Jira/Confluence
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Tableau
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Microsoft Office Suite (Excel, Word, Teams, PowerPoint, etc.)
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>MATLAB
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Tableau
                         </li>
                     </ul>
                 </div>
@@ -180,12 +178,6 @@
                     <p>GroupMe.FYI is a web app written in Django that authenticates with GroupMe allowing users to see key stats (total likes, total messages, etc.) about the user's groups.</p>
                     <p><u><a href="https://groupmefyi.herokuapp.com/">Link</a></u> to project.<b> Note:</b> the app might take a second to load.</p>
                     <p><u><a href="https://github.com/ColemanMitch/GroupMe.FYI">Link to GitHub project repo</a></u></p>
-                    <hr>
-                    <h4>The Odin Project - JavaScript Track</h4>
-                    <center><img src="assets/img/top-logo.png" width=60%></center>
-                    <!--<p><u><a href="www.groupme.fyi">Link</a></u> to project.<br><b>Note:</b> the app might take a second to load.</p>-->
-                    <p>Lately, I've been working my way through <a href="https://www.theodinproject.com/">The Odin Project's</a> online curriculum for full-stack Javascript development. You can check out my progress/projects in the linked GitHub repo below!</p>
-                    <p><u><a href="https://github.com/ColemanMitch/TheOdinProject">Link to GitHub project repo</a></u></p>
                     <hr>
                     <h4>Speech2Tweet</h4>
                     <center><img src="assets/img/Speech2Tweet_Live_Demo.gif" width=70% class="ImageBorder"></center>
